New game current core bug fixed & diceImage.src added instead of displayDice() function

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
           <p class="current-score" id="current--1">0</p>
         </div>
       </section>
-      <img src="images/dice-1.png" alt="Playing dice" class="dice hidden" />
+      <!-- <img src="images/dice-1.png" alt="Playing dice" class="dice hidden" />
       <img src="images/dice-2.png" alt="Playing dice" class="dice hidden" />
       <img src="images/dice-3.png" alt="Playing dice" class="dice hidden" />
       <img src="images/dice-4.png" alt="Playing dice" class="dice hidden" />
       <img src="images/dice-5.png" alt="Playing dice" class="dice hidden" />
-      <img src="images/dice-6.png" alt="Playing dice" class="dice hidden" />
+      <img src="images/dice-6.png" alt="Playing dice" class="dice hidden" /> -->
+
+      <img src="images/dice-5.png" alt="Playing dice" class="dice" />
 
       <button class="btn newGame">🔄 New Game</button>
       <button class="btn rollDice">🎲 Roll Dice</button>
